# TemplateModernProject

./: .dockerignore  .flake8  .gitignore  CODOWNERS  README.md  README.rst  alembic.ini  asgi.py  custum_logging.py  docker-compose.yml  index.md  logging_config.json  mypy.ini  pyproject.toml  sentry.py  sonar-project.properties
.github/workflows/: app_build.yml  build.yml  code_quality.yml  python-app.yml  sonar.yml  tests.yml
docker/api/: Dockerfile_api  api.sh
docker/grafana/dashboards/: careful_profiling.json  node_exporter.json  postgres_exporter.json  redis-exporter.json
docker/grafana/provisioning/dashboards/: all.yml
docker/grafana/provisioning/datasources/: all.yml
docker/postgres/: init.sql  postgresql.conf
docker/postgres_exporter/: queries.yaml
docker/prometheus/: prometheus.yaml
logg/: custom_logging.py  logging_config.json
migrations/: env.py
migrations/versions/: 1eb35e7eb219_initial.py  5dbd9add1b2a_initial.py
src/account/: account_urls.py  router.py
src/account/account/: utils.py
src/account/auth/: password.py  secret.py  token.py
src/account/models/: account.py  schema.py
src/account/tests/: test_account.py
src/database/: __init__.py  connection.py
src/database/models/: __init__.py
src/database/models/base/: user_models.py
src/database/models/dynamic_models/: profile_models.py
src/integrations/redis/: redis_storage.py
tests/: Dockerfile  contour_up.py  docker-compose.yml  test_templateproject.py
tests/api/: __init__.py  main.py
