[tool.poetry]
name = "templateproject"
version = "0.1.0"
description = ""
authors = ["StepanGavrilov"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
mypy = "^0.961"
pylint = "^2.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
