[tool.poetry]
name = "templateproject"
version = "0.1.0"
description = ""
authors = ["StepanGavrilov"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
mypy = "^0.961"
pylint = "^2.14.3"
flake8 = "^4.0.1"
typing-extensions = "^4.2.0"
types-requests = "^2.27.30"
python-dotenv = "^0.20.0"
loguru = "^0.6.0"
defusedxml = "^0.7.1"
coverage = "^6.4.1"
genbadge = "^1.0.6"
fastapi = "^0.78.0"
tortoise = "^0.1.1"
tortoise-orm = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
