[tool.poetry]
name = "templateproject"
version = "0.1.0"
description = ""
authors = ["StepanGavrilov"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
mypy = "^0.961"
pylint = "^2.14.3"
flake8 = "^4.0.1"
typing-extensions = "^4.2.0"
types-requests = "^2.27.30"
python-dotenv = "^0.20.0"
loguru = "^0.6.0"
defusedxml = "^0.7.1"
coverage = "^6.4.1"
genbadge = "^1.0.6"
fastapi = "^0.78.0"
tortoise = "^0.1.1"
uvicorn = "^0.17.6"
fastapi-users-db-tortoise = "^2.0.0"
tortoise-orm = "0.17.6"
alembic = "^1.8.0"
importlib-resources = "^5.8.0"
zipp = "^3.8.0"
importlib-metadata = "^4.11.4"
wheel = "^0.37.1"
psycopg2 = "^2.9.3"
sqlmodel = "^0.0.6"
asyncpg = "^0.25.0"
greenlet = "^1.1.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.1.1"}
elastic-apm = "^6.10.1"
psutil = "^5.9.1"
returns = "^0.19.0"
sentry-sdk = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
